<?xml version="1.0"?>
<package format="2">
  <name>drill_positioning</name>
  <version>0.0.0</version>
  <description>
   drill_positioning
  </description>

  <maintainer email="fbiffar@ethz.com">Friederike Biffar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>


</package>
